--- a/presentation/src/main/res/layout/layer_wether.xml
+++ b/presentation/src/main/res/layout/layer_wether.xml
@@ -16,11 +16,11 @@
 
 		  style = "@style/AppTheme.text.title"
 		  android:layout_marginTop = "@dimen/weather_top_space"
+		  android:text = "34"
 		  android:textSize = "@dimen/text_size_extra_great"
 		  app:layout_constraintEnd_toEndOf = "@+id/guidelineEnd"
 		  app:layout_constraintStart_toStartOf = "@+id/guidelineStart"
 		  app:layout_constraintTop_toTopOf = "parent"
-		  tools:text = "34"
 	 />
 	 <android.support.v7.widget.AppCompatTextView
 		  android:id = "@+id/txt_subtitle"
@@ -29,17 +29,17 @@
 
 		  style = "@style/AppTheme.text.subtitle"
 		  android:layout_marginTop = "@dimen/padding_normal"
+		  android:text = "Bangalroe"
 		  app:layout_constraintEnd_toEndOf = "@+id/guidelineEnd"
 		  app:layout_constraintStart_toStartOf = "@+id/guidelineStart"
 		  app:layout_constraintTop_toBottomOf = "@+id/txt_cels"
-		  tools:text = "Bangalroe"
 	 />
 	 <android.support.v7.widget.RecyclerView
 		  android:id = "@+id/recycler"
 		  android:layout_width = "match_parent"
 		  android:layout_height = "0dp"
-		  class = "android.support.v7.app.AlertController$RecycleListView"
 		  android:layout_marginTop = "@dimen/weather_bottom_space"
+		  android:elevation = "4dp"
 		  app:layout_constraintBottom_toBottomOf = "parent"
 		  app:layout_constraintEnd_toEndOf = "parent"
 		  app:layout_constraintStart_toStartOf = "parent"
