--- a/presentation/src/main/res/layout/layer_error.xml
+++ b/presentation/src/main/res/layout/layer_error.xml
@@ -4,13 +4,19 @@
 	 xmlns:app = "http://schemas.android.com/apk/res-auto"
 	 xmlns:tools = "http://schemas.android.com/tools">
 	 <data>
+		  <import type = "com.ptitsn.presentation.mvvm.model.ScreenStateEnum"/>
 
+		  <variable name = "vm"
+						type = "com.ptitsn.presentation.mvvm.WeatherVM"/>
 	 </data>
 
 	 <android.support.constraint.ConstraintLayout
 		  android:layout_width = "match_parent"
 		  android:layout_height = "match_parent"
 		  android:background = "@color/bg_error"
+		  app:cv_animated_mask = "@{0}"
+		  app:cv_animated = "@{false}"
+		  app:cv_visible = "@{vm.lvScreenState.state == ScreenStateEnum.ERROR_STATE}"
 	 >
 
 		  <include layout = "@layout/merge_guideline"/>
@@ -21,6 +27,7 @@
 				android:layout_height = "wrap_content"
 				style = "@style/AppTheme.text.error"
 				android:gravity = "center"
+				android:text = "@{vm.lvErrorText}"
 				app:layout_constraintBottom_toTopOf = "@id/retry"
 				app:layout_constraintEnd_toEndOf = "@+id/guidelineEnd"
 				app:layout_constraintStart_toStartOf = "@+id/guidelineStart"
@@ -34,6 +41,7 @@
 				android:layout_height = "wrap_content"
 				android:layout_marginTop = "@dimen/error_button_space"
 				android:background = "@color/bg_grey"
+				android:onClick = "@{()->vm.retry()}"
 				android:paddingBottom = "@dimen/padding_smal"
 				android:paddingEnd = "@dimen/padding_big"
 				android:paddingStart = "@dimen/padding_big"
