--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
 	 <dimen name = "padding_big">24dp</dimen>
 
 	 <dimen name = "text_size_subtitle">36sp</dimen>
+	 <dimen name = "text_size_normal">16sp</dimen>
 	 <dimen name = "text_size_great">54sp</dimen>
 	 <dimen name = "text_size_extra_great">96sp</dimen>
 
@@ -13,5 +14,7 @@
 	 <dimen name = "weather_bottom_space">62dp</dimen>
 
 	 <dimen name = "error_button_space">44dp</dimen>
+	 <dimen name = "divider">1dp</dimen>
+	 <dimen name = "weather_forecust_height">80dp</dimen>
 
 </resources>
