--- a/presentation/src/main/res/values/style.xml
+++ b/presentation/src/main/res/values/style.xml
@@ -28,5 +28,11 @@
 		  <item name = "android:textColor">@color/text_color_white</item>
 	 </style>
 
+	 <style name = "AppTheme.text.normal">
+		  <item name = "android:textStyle">normal</item>
+		  <item name = "android:textSize">@dimen/text_size_normal</item>
+		  <item name = "android:textColor">@color/text_color_title</item>
+	 </style>
+
 
 </resources>
