--- a/presentation/src/main/res/layout/layer_wether.xml
+++ b/presentation/src/main/res/layout/layer_wether.xml
@@ -56,7 +56,7 @@
 				android:layout_marginTop = "@dimen/weather_bottom_space"
 				android:background = "@drawable/shadow_top"
 				android:padding = "@dimen/padding_normal"
-				android:clipToPadding="true"
+				android:clipToPadding="false"
 				android:visibility = "gone"
 				app:cv_animated = "@{true}"
 				app:cv_animated_mask = "@{2|3}"
