--- a/presentation/src/main/res/drawable/shadow_top.xml
+++ b/presentation/src/main/res/drawable/shadow_top.xml
@@ -4,9 +4,7 @@
 
 	 <item>
 		  <shape android:shape = "rectangle">
-				<gradient android:angle = "90" android:endColor = "#33000000"
-							 android:startColor = "#1F000000"/>
-				<corners android:radius = "12dp"/>
+				<solid android:color="#50CCCCCC" />
 		  </shape>
 	 </item>
 
@@ -14,10 +12,9 @@
 		  android:bottom = "0dp"
 		  android:left = "0dp"
 		  android:right = "0dp"
-		  android:top = "4dp">
+		  android:top = "2dp">
 		  <shape android:shape = "rectangle">
 				<solid android:color = "#ffffff"/>
-				<corners android:radius = "12dp"/>
 		  </shape>
 	 </item>
 
