--- a/presentation/src/main/res/layout/layer_wether.xml
+++ b/presentation/src/main/res/layout/layer_wether.xml
@@ -49,23 +49,32 @@
 
 		  <!--background  shadow_top used fo shadow, base on api lvl-->
 		  <!--TODO cv_animated_mask to constants atributes-->
-		  <android.support.v7.widget.RecyclerView
-				android:id = "@+id/recycler"
+		  <FrameLayout
+				android:id = "@+id/shadowConeteiner"
 				android:layout_width = "match_parent"
 				android:layout_height = "0dp"
 				android:layout_marginTop = "@dimen/weather_bottom_space"
 				android:background = "@drawable/shadow_top"
-				android:padding = "@dimen/padding_normal"
-				android:clipToPadding="false"
+				android:elevation = "4dp"
+				android:paddingTop = "2dp"
 				android:visibility = "gone"
 				app:cv_animated = "@{true}"
 				app:cv_animated_mask = "@{2|3}"
 				app:cv_visible = "@{vm.lvWeatherForecastVisibility}"
-
 				app:layout_constraintBottom_toBottomOf = "parent"
 				app:layout_constraintEnd_toEndOf = "parent"
 				app:layout_constraintStart_toStartOf = "parent"
-				app:layout_constraintTop_toBottomOf = "@+id/txt_subtitle"/>
+				app:layout_constraintTop_toBottomOf = "@+id/txt_subtitle"
+				tools:visibility = "visible"
+		  >
+				<android.support.v7.widget.RecyclerView
+					 android:id = "@+id/recycler"
+					 android:layout_width = "match_parent"
+					 android:layout_height = "match_parent"
+					 android:clipToPadding = "false"
+					 android:padding = "@dimen/padding_normal"
+				/>
+		  </FrameLayout>
 
 
 	 </android.support.constraint.ConstraintLayout>
