--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -16,5 +16,6 @@
 	 <dimen name = "error_button_space">44dp</dimen>
 	 <dimen name = "divider">1dp</dimen>
 	 <dimen name = "weather_forecust_height">80dp</dimen>
+	 <dimen name = "progress_bar">96dp</dimen>
 
 </resources>
